# ARM-SIM

./: .gdb_history  .gitignore  AUTHORS  License  Makefile.am  Makefile.in  README  README.md  aclocal.m4  arm.c  arm.h  arm_branch_other.c  arm_branch_other.h  arm_constants.c  arm_constants.h  arm_core.c  arm_core.h  arm_data_processing.c  arm_data_processing.h  arm_exception.c  arm_exception.h  arm_instruction.c  arm_instruction.h  arm_load_store.c  arm_load_store.h  arm_new_data_processing.c  arm_simulator.c  config.h.in  configure  configure.ac  csapp.c  csapp.h  debug.c  debug.h  gdb_commands  gdb_protocol.c  gdb_protocol.h  gdb_test  make_trace.sh  memory.c  (+18 more)
.github/workflows/: c-make.yml
Examples/: Makefile.am  Makefile.in  clock  clock.c  example1.s  example2.s  example3.s  example4.s  fibonacci  fibonacci.c  gdb_debug  ldr_str_test.s  linker_script  my_syscalls.h  my_syscalls.s  my_test.s  some_print  some_print.c  some_print.s  start.c  test_carry  test_carry.s  test_data_processing  test_ldm_stm  test_ldm_stm.s  test_ldr_str  test_ldr_str.s  test_load_store_multiple.s  test_mvn  test_mvn.s  test_or  test_or.s
Examples/trace/: trace_
Showcase/: Makefile.am  a.out  chenillion.c  chenillion_rainbow.c  clock.c  debug  debug.c  insertion_sort.c  irq.s  my_syscalls.h  my_syscalls.s  my_utils.c  my_utils.h  test.c  test.txt  tictactoe.c  tmp
Tests/: Makefile.am  gdb_debug  linker_script  test_data_processing.s  test_ldm_stm.s  test_ldr_str.s
